# ReversiCPP

./: CMakeLists.txt  README.md  info.txt  makefile
etc/: info.txt  log.txt
exe/: cconfig.txt  sconfig.txt
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Pair.cpp  Pair.h  Player.cpp  Player.h  RegularGameLogic.cpp  RegularGameLogic.h  RemoteGame.cpp  RemoteGame.h  RemotePlayer.cpp  RemotePlayer.h  main.cpp  main4.cpp
src/client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Client.cpp  Client.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.h  Game.cpp  Game.h  GameLogic.cpp  HumanPlayer.cpp  Player.cpp  Player.h  RegularGameLogic.cpp  RegularGameLogic.h  RemotePlayerC.cpp  RemotePlayerC.h  RemotePlayerReceiver.cpp  RemotePlayerReceiver.h  RemotePlayerSender.cpp  RemotePlayerSender.h  cconfig.txt  main.cpp  mainC.cpp
src/client/test/: BoardTest.cpp  GameLogicTest.cpp  PossibleMovesTest.cpp  gtest_main.cpp
src/commands/: CloseSpecificGameC.cpp  CloseSpecificGameC.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  GetListOfGamesC.cpp  GetListOfGamesC.h  InfoForCommands.cpp  InfoForCommands.h  JoinSpecificGameC.cpp  JoinSpecificGameC.h  PlayMoveC.cpp  PlayMoveC.h  Room.cpp  Room.h  StartNewGameC.cpp  StartNewGameC.h
src/server/: CloseSpecificGameC.cpp  CloseSpecificGameC.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  GetListOfGameC.cpp  GetListOfGameC.h  GetListOfGamesC.cpp  GetListOfGamesC.h  JoinSpecificGameC.cpp  JoinSpecificGameC.h  PlayMoveC.cpp  PlayMoveC.h  PrintCommand.cpp  Room.h  Server.cpp  Server.h  ServerGames.cpp  ServerGames.h  StartNewGameC.cpp  StartNewGameC.h  Task.h  ThreadPool.cpp  ThreadPool.h  mainS.cpp  sconfig.txt  serversettings
test/: BoardTest.cpp  GameLogicTest.cpp  GameTest.cpp  JustATest.cpp  PossibleMovesTest.cpp  gtest_main.cpp
